--- a/main.css
+++ b/main.css
@@ -8,11 +8,12 @@ body {
     display: flex;
     flex-wrap: wrap;
     background-color: rgba(0, 0, 0, 0.4);
+    justify-content: center;
 }
 
 .img-container {
-    width: 180px;
-    height: 180px;
+    width: 250px;
+    height: 250px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -20,7 +21,7 @@ body {
 }
 
 img {
-    max-width: 180px;
-    max-height: 180px;
+    max-width: 250px;
+    max-height: 250px;
     border: 5px solid rgba(200, 200, 200, 0.7);
 }
