--- a/main.css
+++ b/main.css
@@ -1,71 +1,68 @@
 body {
-    margin: 0 auto;
-    color: white;
-    background-color: #121221;
-}
-
-#container {
-    display: flex;
-    flex-wrap: wrap;
-    background-color: rgba(0, 0, 0, 0.4);
-    justify-content: center;
-}
-
-.img-container {
-    width: 230px;
-    height: 280px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 10px;
-
-    perspective: 1000px;
-	perspective-origin: center top;
-
-    overflow: hidden;
-    transform-origin: 100% 0;
-
-	box-shadow: 0px 10px 39px 10px rgba(62, 66, 66, 0.22);
-	border-radius: 2px;
-	transition: transform 0.3s ease-in-out;
-
-	&:hover {
-		transform: rotateX(10deg);
-
-		.gradient {
-			height: 100%;
-			opacity: 1;
-		}
-	}
+	background-color: #121221;
 }
 
 img {
-    width: 100%;
-    height: 100%;
-    max-width: 230px;
-    max-height: 280px;
+	width: 100%;
 }
 
-.gradient {
-    position: absolute;
-    content: "";
-    top: 0;
-    left: 0;
-    z-index: 1;
+#library {
+	display: flex;
+	grid-gap: 16px;
+	justify-content: center;
+	align-items: center;
+  flex-wrap: wrap;
+}
 
-    transform: rotate(30deg);
-    transform-origin: top right;
+.game {
+	width: 200px;
+	display: flex;
+	perspective: 1000px;
+	perspective-origin: center top;
+	height: max-content;
 
-    width: 200%;
-    height: 65%;
+	.game-wrapper {
+		position: relative;
+		display: flex;
+		overflow: hidden;
 
-    opacity: 0.3;
-    background: linear-gradient(
-        0turn,
-        transparent 0%,
-        rgba(200, 200, 200, 0.4) 5%,
-        rgba(255, 255, 255, 0.2) 15%,
-        rgba(255, 255, 255, 0.1) 100%
-    );
-    transition: height 0.3s ease-in-out, opacity 0.3s ease-in-out;
+		transform-origin: 100% 0;
+
+		box-shadow: 0px 10px 39px 10px rgba(62, 66, 66, 0.22);
+		border-radius: 2px;
+		transition: transform 0.3s ease-in-out;
+
+		&:hover {
+			transform: rotateX(10deg);
+
+			.gradient {
+				height: 100%;
+				opacity: 1;
+			}
+		}
+	}
+
+	.gradient {
+		position: absolute;
+		content: "";
+		top: 0;
+		left: 0;
+		z-index: 1;
+
+		transform: rotate(30deg);
+		transform-origin: top right;
+
+		width: 200%;
+		height: 65%;
+
+		opacity: 0.3;
+		background: linear-gradient(
+			0turn,
+			transparent 0%,
+			rgba(200, 200, 200, 0.4) 5%,
+			rgba(255, 255, 255, 0.2) 15%,
+			rgba(255, 255, 255, 0.1) 100%
+		);
+		transition: height 0.3s ease-in-out, opacity 0.3s ease-in-out;
+	}
 }
